--- a/TypeScriptDemo/index.html
+++ b/TypeScriptDemo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="file.ts"></script>
+    <script src="demo1.js"></script>
 </head>
 <body>
 
